Document 404 assets.txt fix